--- a/app/index.html
+++ b/app/index.html
@@ -996,9 +996,10 @@
         <div class="container">
             <div class="news__inner">
                 <div class="news__inner-title">
-                    Latest <span>News</span> 
+                    Latest <span>News</span>
                     <div class="news__title-text">
-                        Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo
+                        Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats.
+                        Lid est laborum dolo
                         rumes fugats untras.
                     </div>
                 </div>
@@ -1084,7 +1085,7 @@
             <div class="support__inner">
                 <div class="support__inner-money">
                     <img src="images/support/img-1.png" alt=""> <br>
-                    30 Days Money Back <span>Guarantee</span> 
+                    30 Days Money Back <span>Guarantee</span>
                 </div>
 
                 <div class="support__inner-friend">
@@ -1105,11 +1106,86 @@
                     Over 25,000 designers and developers trust the MartPlace.
                 </div>
                 <div class="banner__inner-btn">
-                    <a href="#">Join Us Today</a> 
+                    <a href="#">Join Us Today</a>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__content">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="footer__col">
+                        <div class="footer__col-logo">
+                            <img src="images/footer/logo.png" alt="">
+                            <a href="#">Mart<span>Place</span></a>
+                        </div>
+                        <div class="footer__col-text">
+                            Nunc placerat mi id nisi interdum they mollis. Praesent pharetra, justo ut scel erisque the
+                            mattis, leo quam.
+                        </div>
+                        <div class="footer__col-phone">
+                            Phone: <a href="tel:67898752235">+6789-875-2235</a>
+                        </div>
+                        <div class="footer__col-mail">
+                            support@aazztech.com
+                        </div>
+                        <div class="footer__col-map">
+                            202 New Hampshire Avenue <br>
+                            Northwest #100, New York-2573
+                        </div>
+                    </div>
+
+                    <div class="footer__col footer__col-menu">
+                        <div class="footer__col-title">Our Company</div>
+                        <ul class="footer__col-list">
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">How It Work</a></li>
+                            <li><a href="#">Affiliates</a></li>
+                            <li><a href="#">Testimonials</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Copyright Notice</a></li>
+                            <li><a href="#">Blog</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__col footer__col-menu">
+                        <div class="footer__col-title">Help Support</div>
+                        <ul class="footer__col-list">
+                            <li><a href="#">Support Forum</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="#">Support Policy</a></li>
+                            <li><a href="#">Refund Policy</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Buyers Faq</a></li>
+                            <li><a href="#">Sellers Faq</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__col footer__col-newsteller">
+                        <div class="footer__col-title">
+                            Newsletter
+                        </div>
+                        <div class="footer__col-text">
+                            Subscribe to get the latest news, update and offer information. Don't worry, we won't send spam!
+                        </div>
+                        <div class="footer__col-search">
+                            <input type="text" placeholder="Enter email" required>
+                            <button type="submit">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copy">
+            <div class="container">
+                <div class="footer__copy-text">
+                    ©2017 <a href="#">MartPlace</a>. All rights reserved. Created by <a href="#">AazzTech</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
